// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDialog render add 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        aria-labelledby="rcDialogTitle0"
        class="ant-modal-wrap"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="ant-modal"
          role="document"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="rcDialogTitle0"
              >
                test name
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-row"
              >
                <div
                  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-no-default-orientation-margin-left"
                  role="separator"
                >
                  <span
                    class="ant-divider-inner-text"
                    style="margin-left: 0px;"
                  >
                    Topping
                  </span>
                </div>
                <div
                  class="ant-checkbox-group"
                >
                  <label
                    class="ant-checkbox-wrapper ant-checkbox-group-item"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="1"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      topping 1
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="ant-row"
              >
                <div
                  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-no-default-orientation-margin-left"
                  role="separator"
                >
                  <span
                    class="ant-divider-inner-text"
                    style="margin-left: 0px;"
                  >
                    Size
                  </span>
                </div>
                <div
                  class="ant-radio-group ant-radio-group-outline"
                >
                  <label
                    class="ant-radio-wrapper"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        type="radio"
                        value="1"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      size 1
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                style="display: flex; width: 100%;"
              >
                <div
                  style="flex: 1;"
                >
                  <span
                    class="ant-input-group-wrapper"
                    style="text-align: right;"
                  >
                    <span
                      class="ant-input-wrapper ant-input-group"
                    >
                      <span
                        class="ant-input-group-addon"
                      >
                        <span
                          aria-label="plus"
                          class="anticon anticon-plus"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="plus"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <defs>
                              <style />
                            </defs>
                            <path
                              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                            />
                            <path
                              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                            />
                          </svg>
                        </span>
                      </span>
                      <input
                        class="ant-input"
                        type="text"
                        value="1"
                      />
                      <span
                        class="ant-input-group-addon"
                      >
                        <span
                          aria-label="minus"
                          class="anticon anticon-minus"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="minus"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
                <button
                  class="ant-btn ant-btn-default"
                  style="margin-left: 8px;"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    Add To Cart
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ItemDialog render loading 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        aria-labelledby="rcDialogTitle2"
        class="ant-modal-wrap"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="ant-modal"
          role="document"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="rcDialogTitle2"
              >
                Loading...
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-skeleton"
              >
                <div
                  class="ant-skeleton-content"
                >
                  <h3
                    class="ant-skeleton-title"
                    style="width: 38%;"
                  />
                  <ul
                    class="ant-skeleton-paragraph"
                  >
                    <li />
                    <li />
                    <li
                      style="width: 61%;"
                    />
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                style="display: flex; width: 100%;"
              >
                <div
                  style="flex: 1;"
                >
                  <span
                    class="ant-input-group-wrapper"
                    style="text-align: right;"
                  >
                    <span
                      class="ant-input-wrapper ant-input-group"
                    >
                      <span
                        class="ant-input-group-addon"
                      >
                        <span
                          aria-label="plus"
                          class="anticon anticon-plus"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="plus"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <defs>
                              <style />
                            </defs>
                            <path
                              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                            />
                            <path
                              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                            />
                          </svg>
                        </span>
                      </span>
                      <input
                        class="ant-input"
                        type="text"
                        value="1"
                      />
                      <span
                        class="ant-input-group-addon"
                      >
                        <span
                          aria-label="minus"
                          class="anticon anticon-minus"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="minus"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
                <button
                  class="ant-btn ant-btn-default"
                  style="margin-left: 8px;"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary"
                  disabled=""
                  type="button"
                >
                  <span>
                    Add To Cart
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
